# LECUA

./: README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
public/css/: prism-synthwave84.css
src/: App.css  App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/ui/code-editor/: cursor.rs
src-tauri/src/utility/: compiler.rs  file.rs  math.rs  start_session.ps1  terminal.rs
src/elements/button/: Button.jsx  button.css
src/elements/notification/: Notification.jsx  notification.css
src/elements/window/dialog/: Dialog.jsx  dialog.css
src/elements/window/dialog/SaveDialog/: SaveDialog.jsx  saveDialog.css
src/elements/window/title/: TitleBar.jsx  titleBar.css
src/elements/window/title/menu/: Menu.jsx  menu.css
src/elements/window/title/navigationMenu/: NavigationMenu.jsx  navigationMenu.css
src/elements/window/tool/: Hierarchy.jsx  hierarchy.css
src/elements/window/tool/codeEditor/: CodeEditor.jsx  code.css  codeEditor.css
src/elements/window/tool/hierarchy/: Element.jsx  File.jsx  Folder.jsx  Hierarchy.jsx  hierarchy.css
src/elements/window/tool/terminal/: Terminal.jsx  terminal.css
