[package]
name = "LECUA"
version = "0.0.1"
description = "A lightweight code editor"
authors = ["Kieferer"]
license = ""
repository = "https://github.com/Kieferer/LECUA"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog-all", "shell-open", "updater", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.2.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
